add configs for connecting to mysql db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 
+## Connection path to the database
+spring.datasource.url=jdbc:mysql://localhost:3306/iber_db
+
+## Username to database
+spring.datasource.username=root
+
+## Password to database
+spring.datasource.password=
+
+## Drop database scheme during shutdown
+spring.jpa.hibernate.ddl-auto=create
+
+## Log the SQL statement in the console
+spring.jpa.show-sql=true
+
+## Format sql statement
+spring.jpa.properties.hibernate.format_sql=true
