--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 ## Connection path to the database
 spring.datasource.url=jdbc:mysql://localhost:3306/iber_db
 
@@ -13,6 +12,8 @@ spring.jpa.hibernate.ddl-auto=create
 
 ## Log the SQL statement in the console
 spring.jpa.show-sql=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 ## Format sql statement
 spring.jpa.properties.hibernate.format_sql=true
