--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 ## Format sql statement
 spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8081
