--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=root
 ## Password to database
 spring.datasource.password=
 
+server.port=8081
 ## Drop database scheme during shutdown
 spring.jpa.hibernate.ddl-auto=create
 
