--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,29 @@
 ## Connection path to the database
-spring.datasource.url=jdbc:mysql://localhost:3306/iber_db
+#spring.datasource.url=jdbc:mysql://localhost:3306/iber_db
+#
+### Username to database
+#spring.datasource.username=root
+#
+### Password to database
+#spring.datasource.password=
+#
+### Drop database scheme during shutdown
+#spring.jpa.hibernate.ddl-auto=create
+#
+### Log the SQL statement in the console
+#spring.jpa.show-sql=true
+#
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#
+### Format sql statement
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#server.port=8081
 
-## Username to database
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-## Password to database
-spring.datasource.password=
 
-## Drop database scheme during shutdown
-spring.jpa.hibernate.ddl-auto=create
-
-## Log the SQL statement in the console
-spring.jpa.show-sql=true
-
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-## Format sql statement
-spring.jpa.properties.hibernate.format_sql=true
-
-server.port=8081
